// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginDetails should render properly 1`] = `
<div>
  <button>
    Fetch Packages
  </button>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-18ta3r7-0 tELEj flex w-12"
        >
          <div
            class="sc-bdnxRM AkeAK mx-auto"
            height="10"
            width="10"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus active"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdnxRM NjstW p-1"
                          height="20"
                          width="20"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 eFeTGz border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="w-full bg-theme-background"
            data-testid="plugin-details__header"
          >
            <div
              class="flex w-full"
            >
              <div
                class="PluginImage__PluginImageWrapper-sc-10kztrf-0 kWnglb bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700 filter-grayscale"
                data-testid="PluginImage"
              >
                <svg>
                  exchange-logo-placeholder.svg
                </svg>
              </div>
              <div
                class="flex flex-col justify-between pl-8 w-full min-w-0"
              >
                <div
                  class="flex justify-between items-end"
                >
                  <div
                    class="flex overflow-hidden flex-col mr-8 space-y-2 leading-tight"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="text-2xl font-bold"
                      >
                        Test Plugin
                      </span>
                    </div>
                    <span
                      class="text-medium text-theme-secondary-500 truncate"
                    />
                  </div>
                  <div
                    class="flex"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <button
                        class="OriginalButton__StyledButton-sc-o0fs2j-0 jfKZOY"
                        data-testid="PluginHeader__button--report"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          <div
                            class="sc-bdnxRM NjstW"
                            height="20"
                            width="20"
                          >
                            <svg>
                              report.svg
                            </svg>
                          </div>
                        </div>
                      </button>
                      <div
                        class="relative"
                      >
                        <span
                          data-testid="dropdown__toggle"
                        >
                          <button
                            class="OriginalButton__StyledButton-sc-o0fs2j-0 fezzkH text-left"
                            data-testid="PluginHeader__dropdown-toggle"
                            type="button"
                          >
                            <div
                              class="flex relative items-center space-x-2"
                            >
                              <div
                                class="sc-bdnxRM NjstW"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Divider-sc-17ehhxk-0 hZpmpp border-theme-secondary-300 dark:border-theme-secondary-800"
                  type="horizontal"
                />
                <div
                  class="flex justify-between space-4"
                >
                  <div
                    class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
                  >
                    <div
                      class="flex"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Author
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          <span
                            class="font-semibold text-theme-secondary-text"
                          >
                            Unknown
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Category
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          Exchange
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          URL
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          N/A
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
                  >
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col text-right"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Size
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          <span
                            data-testid="PluginSpecs__size"
                          >
                            0 B
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col text-right"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Version
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          0.0.0
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 efrBqv"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mt-8"
          >
            <div
              class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
            >
              <div
                class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  height="20"
                  width="20"
                >
                  <svg>
                    alert-warning.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col w-full"
              >
                <p
                  class="font-semibold dark:text-theme-secondary-500"
                  data-testid="Alert__title"
                >
                  Disclaimer
                </p>
                <div
                  class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
                >
                  The availability of this Plugin in the Payvo Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PluginDetails should render properly for remote package 1`] = `
<div>
  <button>
    Fetch Package
  </button>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-18ta3r7-0 tELEj flex w-12"
        >
          <div
            class="sc-bdnxRM AkeAK mx-auto"
            height="10"
            width="10"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus active"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdnxRM NjstW p-1"
                          height="20"
                          width="20"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 eFeTGz border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="w-full bg-theme-background"
            data-testid="plugin-details__header"
          >
            <div
              class="flex w-full"
            >
              <div
                class="PluginImage__PluginImageWrapper-sc-10kztrf-0 kWnglb bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700 filter-grayscale"
                data-testid="PluginImage"
              >
                <svg>
                  plugin-logo-placeholder.svg
                </svg>
              </div>
              <div
                class="flex flex-col justify-between pl-8 w-full min-w-0"
              >
                <div
                  class="flex justify-between items-end"
                >
                  <div
                    class="flex overflow-hidden flex-col mr-8 space-y-2 leading-tight"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="text-2xl font-bold"
                      >
                        Remote Plugin
                      </span>
                    </div>
                    <span
                      class="text-medium text-theme-secondary-500 truncate"
                    />
                  </div>
                  <div
                    class="flex"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 jVYfXJ"
                      data-testid="PluginHeader__button--install"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        Install
                      </div>
                    </button>
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 jfKZOY ml-3"
                      data-testid="PluginHeader__button--report"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdnxRM NjstW"
                          height="20"
                          width="20"
                        >
                          <svg>
                            report.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="Divider-sc-17ehhxk-0 hZpmpp border-theme-secondary-300 dark:border-theme-secondary-800"
                  type="horizontal"
                />
                <div
                  class="flex justify-between space-4"
                >
                  <div
                    class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
                  >
                    <div
                      class="flex"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Author
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          <span
                            class="font-semibold text-theme-secondary-text"
                          >
                            Unknown
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Category
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          Other
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          URL
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          N/A
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
                  >
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col text-right"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Size
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          <span
                            data-testid="PluginSpecs__size"
                          >
                            N/A
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col text-right"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Version
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          0.0.0
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 efrBqv"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mt-8"
          >
            <div
              class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
            >
              <div
                class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  height="20"
                  width="20"
                >
                  <svg>
                    alert-warning.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col w-full"
              >
                <p
                  class="font-semibold dark:text-theme-secondary-500"
                  data-testid="Alert__title"
                >
                  Disclaimer
                </p>
                <div
                  class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
                >
                  The availability of this Plugin in the Payvo Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PluginDetails should report plugin 1`] = `
<div>
  <button>
    Fetch Packages
  </button>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-18ta3r7-0 tELEj flex w-12"
        >
          <div
            class="sc-bdnxRM AkeAK mx-auto"
            height="10"
            width="10"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus active"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdnxRM NjstW p-1"
                          height="20"
                          width="20"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 eFeTGz border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="w-full bg-theme-background"
            data-testid="plugin-details__header"
          >
            <div
              class="flex w-full"
            >
              <div
                class="PluginImage__PluginImageWrapper-sc-10kztrf-0 kWnglb bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700 filter-grayscale"
                data-testid="PluginImage"
              >
                <svg>
                  exchange-logo-placeholder.svg
                </svg>
              </div>
              <div
                class="flex flex-col justify-between pl-8 w-full min-w-0"
              >
                <div
                  class="flex justify-between items-end"
                >
                  <div
                    class="flex overflow-hidden flex-col mr-8 space-y-2 leading-tight"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="text-2xl font-bold"
                      >
                        Test Plugin
                      </span>
                    </div>
                    <span
                      class="text-medium text-theme-secondary-500 truncate"
                    />
                  </div>
                  <div
                    class="flex"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <button
                        class="OriginalButton__StyledButton-sc-o0fs2j-0 jfKZOY"
                        data-testid="PluginHeader__button--report"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          <div
                            class="sc-bdnxRM NjstW"
                            height="20"
                            width="20"
                          >
                            <svg>
                              report.svg
                            </svg>
                          </div>
                        </div>
                      </button>
                      <div
                        class="relative"
                      >
                        <span
                          data-testid="dropdown__toggle"
                        >
                          <button
                            class="OriginalButton__StyledButton-sc-o0fs2j-0 fezzkH text-left"
                            data-testid="PluginHeader__dropdown-toggle"
                            type="button"
                          >
                            <div
                              class="flex relative items-center space-x-2"
                            >
                              <div
                                class="sc-bdnxRM NjstW"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Divider-sc-17ehhxk-0 hZpmpp border-theme-secondary-300 dark:border-theme-secondary-800"
                  type="horizontal"
                />
                <div
                  class="flex justify-between space-4"
                >
                  <div
                    class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
                  >
                    <div
                      class="flex"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Author
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          <span
                            class="font-semibold text-theme-secondary-text"
                          >
                            Unknown
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Category
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          Exchange
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          URL
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          N/A
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
                  >
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col text-right"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Size
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          <span
                            data-testid="PluginSpecs__size"
                          >
                            0 B
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col text-right"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Version
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          0.0.0
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 efrBqv"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mt-8"
          >
            <div
              class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
            >
              <div
                class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  height="20"
                  width="20"
                >
                  <svg>
                    alert-warning.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col w-full"
              >
                <p
                  class="font-semibold dark:text-theme-secondary-500"
                  data-testid="Alert__title"
                >
                  Disclaimer
                </p>
                <div
                  class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
                >
                  The availability of this Plugin in the Payvo Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PluginDetails should show configuration for plugins from npm 1`] = `
<div>
  <button>
    Fetch Packages
  </button>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-18ta3r7-0 tELEj flex w-12"
        >
          <div
            class="sc-bdnxRM AkeAK mx-auto"
            height="10"
            width="10"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus active"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdnxRM NjstW p-1"
                          height="20"
                          width="20"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 eFeTGz border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="w-full bg-theme-background"
            data-testid="plugin-details__header"
          >
            <div
              class="flex w-full"
            >
              <div
                class="PluginImage__PluginImageWrapper-sc-10kztrf-0 kWnglb bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700 filter-grayscale"
                data-testid="PluginImage"
              >
                <svg>
                  plugin-logo-placeholder.svg
                </svg>
              </div>
              <div
                class="flex flex-col justify-between pl-8 w-full min-w-0"
              >
                <div
                  class="flex justify-between items-end"
                >
                  <div
                    class="flex overflow-hidden flex-col mr-8 space-y-2 leading-tight"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="text-2xl font-bold"
                      >
                        My Export Transaction
                      </span>
                    </div>
                    <span
                      class="text-medium text-theme-secondary-500 truncate"
                    >
                      Export your wallet transaction history
                    </span>
                  </div>
                  <div
                    class="flex"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 jVYfXJ"
                      data-testid="PluginHeader__button--install"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        Install
                      </div>
                    </button>
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 jfKZOY ml-3"
                      data-testid="PluginHeader__button--report"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdnxRM NjstW"
                          height="20"
                          width="20"
                        >
                          <svg>
                            report.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="Divider-sc-17ehhxk-0 hZpmpp border-theme-secondary-300 dark:border-theme-secondary-800"
                  type="horizontal"
                />
                <div
                  class="flex justify-between space-4"
                >
                  <div
                    class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
                  >
                    <div
                      class="flex"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Author
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          <span
                            class="font-semibold text-theme-secondary-text"
                          >
                            Edgar Goetzendorff
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Category
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          Other
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          URL
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          <a
                            class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                            data-ring-focus-margin="-m-1"
                            data-testid="PluginSpecs__url"
                            href="#"
                            rel="noopener noreferrer"
                            to="https://github.com/dated/transaction-export-plugin"
                          >
                            <span
                              class="Link__Content-sc-ec014t-1 hUiuRR"
                            >
                              github.com
                            </span>
                            <span
                              class="align-middle"
                            >
                              <div
                                class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block pb-px text-sm"
                                data-testid="Link__external"
                                height="16"
                                width="16"
                              >
                                <svg>
                                  redirect.svg
                                </svg>
                              </div>
                            </span>
                          </a>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
                  >
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col text-right"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Size
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          <span
                            data-testid="PluginSpecs__size"
                          >
                            N/A
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col text-right"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Version
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          1.0.3
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 efrBqv"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div>
            <p
              class="font-bold"
            >
              About
            </p>
            <p
              class="mt-3 text-theme-secondary-600"
              data-testid="plugin-info__about"
            >
              Export your wallet transaction history
            </p>
          </div>
          <div
            class="mt-8"
          >
            <div
              class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
            >
              <div
                class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  height="20"
                  width="20"
                >
                  <svg>
                    alert-warning.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col w-full"
              >
                <p
                  class="font-semibold dark:text-theme-secondary-500"
                  data-testid="Alert__title"
                >
                  Disclaimer
                </p>
                <div
                  class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
                >
                  The availability of this Plugin in the Payvo Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PluginDetails should update package 1`] = `
<div>
  <button>
    Fetch Packages
  </button>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-18ta3r7-0 tELEj flex w-12"
        >
          <div
            class="sc-bdnxRM AkeAK mx-auto"
            height="10"
            width="10"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus active"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdnxRM NjstW p-1"
                          height="20"
                          width="20"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 eFeTGz border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="w-full bg-theme-background"
            data-testid="plugin-details__header"
          >
            <div
              class="flex w-full"
            >
              <div
                class="PluginImage__PluginImageWrapper-sc-10kztrf-0 kWnglb bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700 filter-grayscale"
                data-testid="PluginImage"
              >
                <svg>
                  plugin-logo-placeholder.svg
                </svg>
              </div>
              <div
                class="flex flex-col justify-between pl-8 w-full min-w-0"
              >
                <div
                  class="flex justify-between items-end"
                >
                  <div
                    class="flex overflow-hidden flex-col mr-8 space-y-2 leading-tight"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="text-2xl font-bold"
                      >
                        Transaction Export Plugin
                      </span>
                    </div>
                    <span
                      class="text-medium text-theme-secondary-500 truncate"
                    />
                  </div>
                  <div
                    class="flex"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <button
                        class="OriginalButton__StyledButton-sc-o0fs2j-0 jfKZOY"
                        data-testid="PluginHeader__button--report"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          <div
                            class="sc-bdnxRM NjstW"
                            height="20"
                            width="20"
                          >
                            <svg>
                              report.svg
                            </svg>
                          </div>
                        </div>
                      </button>
                      <div
                        class="relative"
                      >
                        <span
                          data-testid="dropdown__toggle"
                        >
                          <button
                            class="OriginalButton__StyledButton-sc-o0fs2j-0 fezzkH text-left"
                            data-testid="PluginHeader__dropdown-toggle"
                            type="button"
                          >
                            <div
                              class="flex relative items-center space-x-2"
                            >
                              <div
                                class="sc-bdnxRM NjstW"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Divider-sc-17ehhxk-0 hZpmpp border-theme-secondary-300 dark:border-theme-secondary-800"
                  type="horizontal"
                />
                <div
                  class="flex justify-between space-4"
                >
                  <div
                    class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
                  >
                    <div
                      class="flex"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Author
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          <span
                            class="font-semibold text-theme-secondary-text"
                          >
                            Unknown
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Category
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          Other
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col undefined"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          URL
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          N/A
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
                  >
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col text-right"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Size
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          <span
                            data-testid="PluginSpecs__size"
                          >
                            0 B
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex pl-8"
                    >
                      <div
                        class="flex flex-col text-right"
                      >
                        <span
                          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Version
                        </span>
                        <span
                          class="font-semibold text-theme-secondary-text"
                        >
                          1.0.0
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 efrBqv"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mt-8"
          >
            <div
              class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
            >
              <div
                class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  height="20"
                  width="20"
                >
                  <svg>
                    alert-warning.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col w-full"
              >
                <p
                  class="font-semibold dark:text-theme-secondary-500"
                  data-testid="Alert__title"
                >
                  Disclaimer
                </p>
                <div
                  class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
                >
                  The availability of this Plugin in the Payvo Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
